--- a/styles.css
+++ b/styles.css
@@ -219,3 +219,56 @@ html{
     cursor: pointer;
     box-shadow: 0 0 10px #fff1e2;
 }
+
+/* Footer */
+
+#footer{
+    background-color: #1a2b53b9;
+}
+.footercontainer{
+    width: 100%;
+    padding: 20px 10px 10px;
+}
+.socialicons{
+    display: flex;
+    justify-content: center;
+}
+.socialicons a{
+    text-decoration: none;
+    padding: 10px;
+    background-color: #fff1e2;
+    margin: 10px;
+    border-radius: 50%;
+}
+.socialicons a i{
+    font-size: 2em;
+    color:#1a2b53;
+    opacity: 0.9;
+}
+
+/* Hover Effects on Social Media Icons */
+.socialicons a:hover{
+    background-color:#1a2b53b9;
+    transition: 0.5s;
+}
+.socialicons a:hover i{
+    color: #fff1e2;
+    transition: 0.5s;
+}
+
+/*Footer Bottom */
+.bottom{
+ background-color: #1a2b53b9; 
+ padding: 10px;
+ text-align: center;
+}
+.bottom p{
+    color:#fff1e2
+}
+.designer{
+    opacity: 0.7;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-weight: 400;
+    margin: 0px 5px;
+}
